--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "arrow-keys-react": "^1.0.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-keyboard-event-handler": "^1.5.4",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.4",
     "redux": "^4.0.5"
